fta config change